--- a/netbox_application_list_plugin/templates/netbox_application_list_plugin/application-list.html
+++ b/netbox_application_list_plugin/templates/netbox_application_list_plugin/application-list.html
@@ -15,6 +15,10 @@
               <th scope="row">Name</th>
               <td>{{ object.name }}</td>
             </tr>
+            <tr>
+              <th scope="row">Version</th>
+              <td>{{ object.version }}</td>
+            </tr>
           </table>
         </div>
       </div>
